--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ p {
         <!-- NURVEIL -->
         <div class="card">
             <h3 class="neon">Nurveil: The Eyes of Light</h3>
-            <p><i>Released</i></p>
+            <p><i>In development</i></p>
             <p>An immersive RPG featuring exploration, combat, puzzles, merchants, inventory systems and AI-driven encounters.</p>
             <p><b>Link:</b>
                 <a class="project-link" href="https://drive.google.com/drive/folders/1qUa0dzF_i9TLK-EEAjVo16XHSIsQ5mMS" target="_blank" rel="noopener noreferrer">
@@ -328,7 +328,7 @@ p {
         <!-- ROYAL MARATHA -->
         <div class="card">
             <h3 class="neon">Royal Maratha (VR)</h3>
-            <p><i>Internal Platform</i></p>
+            <p><i>Exclusive release</i></p>
             <p>A VR combat arena experience with swordplay, enemy waves, projectiles, and immersive interactions.</p>
             <p><b>Link:</b>
                 <a class="project-link" href="https://youtu.be/-hoqSp7TJNY?si=YIb9zlDXF9-o0D-O" target="_blank" rel="noopener noreferrer">
